--- a/app_admin/src/app/trip-card/trip-card.component.html
+++ b/app_admin/src/app/trip-card/trip-card.component.html
@@ -8,8 +8,11 @@
       {{ trip.perPerson | currency: "USD" : "symbol" }} per person
     </p>
     <p class="card-text" [innerHTML]="trip.description"></p>
-    <div>
+    <div *ngIf="isLoggedIn()">
       <button (click)="editTrip(trip)" class="btn btn-info">Edit</button>
+      <button (click)="deleteTrip(trip)" class="btn btn-danger">
+        Delete
+      </button>
     </div>
   </div>
 </div>
