--- a/app_admin/src/app/trip-card/trip-card.component.html
+++ b/app_admin/src/app/trip-card/trip-card.component.html
@@ -4,8 +4,7 @@
   <div class="card-body">
     <h6 class="card-subtitle mb-2 text-muted">{{ trip.resort }}</h6>
     <p class="card-subtitle mt-3 mb-3 text-muted">
-      {{ trip.length }} only
-      {{ trip.perPerson | currency: "USD" : "symbol" }} per person
+      {{ trip.length }} only {{ trip.perPerson }} per person
     </p>
     <p class="card-text" [innerHTML]="trip.description"></p>
     <div *ngIf="isLoggedIn()">
